RESOLVED FIXED131433
REGRESSION(r166975): [GTK] Page overlays are not drawn anymore after r166975
https://bugs.webkit.org/show_bug.cgi?id=131433
Summary REGRESSION(r166975): [GTK] Page overlays are not drawn anymore after r166975
Carlos Garcia Campos
Reported 2014-04-09 00:19:05 PDT
WebPage::pageOverlays() and WebPage::drawPageOverlay() have been removed in r166975. We need to use PageOverlayController now.
Attachments
Patch (12.19 KB, patch)
2015-01-27 05:17 PST, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2014-04-09 00:36:04 PDT
Carlos Garcia Campos
Comment 2 2014-04-23 00:46:07 PDT
It seems webkit-patch land incorrectly closed this bug. This regression is still present.
Carlos Garcia Campos
Comment 3 2015-01-27 05:17:47 PST
Created attachment 245437 [details] Patch This brings back the highlighted areas used by the inspector!
Zan Dobersek
Comment 4 2015-01-27 05:34:07 PST
Comment on attachment 245437 [details] Patch r=me
Carlos Garcia Campos
Comment 5 2015-01-27 08:10:28 PST
Note You need to log in before you can comment on or make changes to this bug.