Unreviewed. Fix GTK+ build after r166975.

Do not use WebPage removed API to fix the build. Page overlays are
no broken, see https://bugs.webkit.org/show_bug.cgi?id=131433.

* WebProcess/WebPage/DrawingAreaImpl.cpp:
(WebKit::DrawingAreaImpl::display):
* WebProcess/WebPage/gtk/LayerTreeHostGtk.cpp:
(WebKit::LayerTreeHostGtk::initialize):
(WebKit::LayerTreeHostGtk::paintContents):

Canonical link: https://commits.webkit.org/149491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167006 268f45cc-cd09-0410-ab3c-d52691b4dbfc